# forexfactory-autotrader

./: .gitignore  README.md  main.py  pyproject.toml  settings.py  trade_list_source.html  trader_page_source.html
etc/: .#ratmach-study.html  grab.py  grab2.py  page-tidy.html  page-tidy.html~  page.html  parse.py  parse.py~  parse2.py  ratmach.html  yield_none.py
forexfactory_autotrader/: db.py  mt5.py
tests/: test_forexfactory_autotrader.py
